kubernetes/apps/selfhosted/linkwarden/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: selfhosted
  labels:
    app: linkwarden
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: linkwarden
