kubernetes/apps/selfhosted/linkwarden/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: selfhosted
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bookmarks.${SECRET_EXTERNAL_DOMAIN}
      secretName: linkwarden-tls
  rules:
    - host: bookmarks.${SECRET_EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  number: 3000
